Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77233

Setting a panel to SceneModal immediately after creation is preventing mouse hover events also after unsetting modality

XMLWordPrintable

    • 5a6fb46488ebc26b79b9d37a7f91969e0d852b4f (qt/qtbase/5.15)

      To reproduce, run attached example and move mouse over the text.

      It should print out hover events it receives, but there are none.

      If instead the setting of scene modality is delayed (toggle the #if), the text item will then receive those hover events normally.

        1. qtbug77233.tar.gz
          0.9 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-77233
        # Subject Branch Project Status CR V

            tvete Paul Olav Tvete
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes